--- a/public/pages/sobre.html
+++ b/public/pages/sobre.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Montserrat:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
     <script
       src="https://kit.fontawesome.com/6e5ace0a19.js"
       crossorigin="anonymous"
@@ -24,6 +25,11 @@
     <link rel="stylesheet" href="../css/logos.css" />
     <link rel="stylesheet" href="../css/navbar.css" />
     <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/sobre/hero.css" />
+    <link rel="stylesheet" href="../css/sobre/produto.css" />
+    <link rel="stylesheet" href="../css/sobre/valores.css" />
+    <link rel="stylesheet" href="../css/sobre/parceiros.css" />
+
   </head>
   <body>
     <div class="website-wrapper">
@@ -68,6 +74,155 @@
           </div>
         </div>
       </nav>
+
+      <section
+        id="hero"
+        class="container-fluid p-5 d-flex align-items-center justify-content-center"
+      >
+        <div class="bg-img-sobre"></div>
+
+        <article class="text-center">
+          <h1 class="hero-header-main">Bem vindo à Systema F!</h1>
+          <p class="hero-header-secondary">
+            Somos uma equipe dedicada e apaixonada comprometida em fornecer
+            soluções inovadoras para atender às suas necessidades. Desde a nossa
+            fundação, buscamos superar expectativas e criar um impacto positivo
+            na forma como você conduz seus negócios.
+          </p>
+        </article>
+      </section>
+
+      <section id="produto" class="container-fluid p-5 mb-5">
+        <div class="row">
+          <div class="col-md-6">
+            <article class="mb-4">
+              <h5>Soluções</h5>
+              <h1 class="product-title">
+                Fystem<span class="colored-at-sign">@</span>
+              </h1>
+              <p class="product-description">
+                Oferecemos o software Fystem@, uma ferramenta poderosa e
+                intuitiva para impulsionar o seu negócio. Com expertise e
+                suporte técnico de alta qualidade, estamos prontos para
+                personalizar o Fystem@ de acordo com as suas necessidades.
+              </p>
+            </article>
+
+            <button class="btn btn-lg btn-primary">Saiba mais!</button>
+          </div>
+          <div class="col-md-6"></div>
+        </div>
+      </section>
+
+      <section id="valores" class="container-fluid p-5">
+        <h1 class="valores-main-header text-center mb-5">
+          Na Sistema F, acreditamos que os valores que norteiam nossas ações são
+          a essência de quem somos.
+        </h1>
+        <div class="row g-3">
+          <div class="col-md-4">
+            <div class="card">
+              <article class="card-body d-flex flex-column justify-content-center">
+                <h4 class="valor-title card-title mb-4">Integridade</h4>
+                <p class="card-text">
+                  Somos guiados pela integridade em todas as nossas atividades.
+                  Mantemos altos padrões éticos, agindo com transparência e
+                  honestidade em cada interação. Acreditamos que a confiança é a
+                  base de relacionamentos duradouros.
+                </p>
+              </article>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <article class="card-body d-flex flex-column justify-content-center">
+                <h4 class="valor-title mb-4">Inovação</h4>
+                <p class="card-text">
+                  A inovação está no nosso DNA. Buscamos constantemente novas
+                  ideias e tecnologias para oferecer soluções que ultrapassem as
+                  expectativas. Encaramos desafios como oportunidades de
+                  crescimento e aprimoramento contínuo.
+                </p>
+              </article>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <article class="card-body d-flex flex-column justify-content-center">
+                <h4 class="valor-title mb-4">Excelência</h4>
+                <p class="card-text">
+                  Buscamos a excelência em tudo o que fazemos. Desde o
+                  desenvolvimento de produtos até o atendimento ao cliente,
+                  comprometemo-nos com altos padrões de qualidade. Não aceitamos
+                  nada menos do que a excelência em cada aspecto do nosso
+                  trabalho.
+                </p>
+              </article>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <article class="card-body d-flex flex-column justify-content-center">
+                <h4 class="valor-title mb-4">Comprometimento com o Cliente</h4>
+                <p class="card-text">
+                  Colocamos nossos clientes no centro de tudo. Nosso compromisso
+                  é entender suas necessidades, superar suas expectativas e
+                  proporcionar uma experiência excepcional. Estamos dedicados a
+                  construir relacionamentos duradouros e colaborativos.
+                </p>
+              </article>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <article class="card-body d-flex flex-column justify-content-center">
+                <h4 class="valor-title mb-4">Colaboração</h4>
+                <p class="card-text">
+                  Acreditamos no poder da colaboração. Trabalhamos em equipe,
+                  valorizando as contribuições individuais. Promovemos um
+                  ambiente inclusivo onde ideias diversas convergem para
+                  impulsionar a inovação e o sucesso coletivo.
+                </p>
+              </article>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card">
+              <article class="card-body d-flex flex-column justify-content-center">
+                <h4 class="valor-title mb-4">Responsabilidade Social</h4>
+                <p class="card-text">
+                  Assumimos a responsabilidade pelos impactos de nossas ações na
+                  sociedade. Buscamos maneiras de contribuir positivamente para
+                  as comunidades em que atuamos, apoiando iniciativas sociais e
+                  causas humanitárias
+                </p>
+              </article>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="parceiros" class="container-fluid p-5">
+        <div class="row gx-5">
+          <div class="col-md-6">
+            <div class="row row-cols-2">
+              <img src="../images/avante.png" alt="" class="img-fluid">
+              <img src="../images/digisat.png" alt="" class="img-fluid">
+              <img src="../images/valid.png" alt="" class="img-fluid">
+              <img src="../images/var.png" alt="" class="img-fluid">
+            </div>
+          </div>
+          <div class="col-md-6 d-flex flex-column justify-content-center">
+            <article>
+              <h5>Colaboração Contínua</h5>
+              <h1 class="parceiros-main-header">
+                Parcerias Sólidas, Resultados Duradouos
+              </h1>
+              <p class="parceiros-description">Na Systema F, acreditamos no poder das parcerias para impulsionar o sucesso mútuo. Colaboramos com organizações líderes e inovadoras para fornecer soluções excepcionais e alcançar resultados duradouros. Nossos parceiros desempenham um papel fundamental na construção de uma rede de confiança e excelência.</p>
+            </article>
+          </div>
+        </div>
+      </section>
 
       <footer class="container-fluid p-5 g-5">
         <div class="row gy-5 gy-md-0">
