finish 'Sobre' page

--- a/public/pages/sobre.html
+++ b/public/pages/sobre.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="../css/sobre/produto.css" />
     <link rel="stylesheet" href="../css/sobre/valores.css" />
     <link rel="stylesheet" href="../css/sobre/parceiros.css" />
+    <link rel="stylesheet" href="../css/sobre/ending.css" />
 
   </head>
   <body>
@@ -114,7 +115,7 @@
         </div>
       </section>
 
-      <section id="valores" class="container-fluid p-5">
+      <section id="valores" class="container-fluid p-5 mb-5">
         <h1 class="valores-main-header text-center mb-5">
           Na Sistema F, acreditamos que os valores que norteiam nossas ações são
           a essência de quem somos.
@@ -122,7 +123,9 @@
         <div class="row g-3">
           <div class="col-md-4">
             <div class="card">
-              <article class="card-body d-flex flex-column justify-content-center">
+              <article
+                class="card-body d-flex flex-column justify-content-center"
+              >
                 <h4 class="valor-title card-title mb-4">Integridade</h4>
                 <p class="card-text">
                   Somos guiados pela integridade em todas as nossas atividades.
@@ -135,7 +138,9 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <article class="card-body d-flex flex-column justify-content-center">
+              <article
+                class="card-body d-flex flex-column justify-content-center"
+              >
                 <h4 class="valor-title mb-4">Inovação</h4>
                 <p class="card-text">
                   A inovação está no nosso DNA. Buscamos constantemente novas
@@ -148,7 +153,9 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <article class="card-body d-flex flex-column justify-content-center">
+              <article
+                class="card-body d-flex flex-column justify-content-center"
+              >
                 <h4 class="valor-title mb-4">Excelência</h4>
                 <p class="card-text">
                   Buscamos a excelência em tudo o que fazemos. Desde o
@@ -162,7 +169,9 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <article class="card-body d-flex flex-column justify-content-center">
+              <article
+                class="card-body d-flex flex-column justify-content-center"
+              >
                 <h4 class="valor-title mb-4">Comprometimento com o Cliente</h4>
                 <p class="card-text">
                   Colocamos nossos clientes no centro de tudo. Nosso compromisso
@@ -175,7 +184,9 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <article class="card-body d-flex flex-column justify-content-center">
+              <article
+                class="card-body d-flex flex-column justify-content-center"
+              >
                 <h4 class="valor-title mb-4">Colaboração</h4>
                 <p class="card-text">
                   Acreditamos no poder da colaboração. Trabalhamos em equipe,
@@ -188,7 +199,9 @@
           </div>
           <div class="col-md-4">
             <div class="card">
-              <article class="card-body d-flex flex-column justify-content-center">
+              <article
+                class="card-body d-flex flex-column justify-content-center"
+              >
                 <h4 class="valor-title mb-4">Responsabilidade Social</h4>
                 <p class="card-text">
                   Assumimos a responsabilidade pelos impactos de nossas ações na
@@ -202,26 +215,62 @@
         </div>
       </section>
 
-      <section id="parceiros" class="container-fluid p-5">
+      <section id="parceiros" class="container-fluid p-5 mb-5">
         <div class="row gx-5">
-          <div class="col-md-6">
-            <div class="row row-cols-2">
-              <img src="../images/avante.png" alt="" class="img-fluid">
-              <img src="../images/digisat.png" alt="" class="img-fluid">
-              <img src="../images/valid.png" alt="" class="img-fluid">
-              <img src="../images/var.png" alt="" class="img-fluid">
-            </div>
-          </div>
           <div class="col-md-6 d-flex flex-column justify-content-center">
             <article>
               <h5>Colaboração Contínua</h5>
               <h1 class="parceiros-main-header">
                 Parcerias Sólidas, Resultados Duradouos
               </h1>
-              <p class="parceiros-description">Na Systema F, acreditamos no poder das parcerias para impulsionar o sucesso mútuo. Colaboramos com organizações líderes e inovadoras para fornecer soluções excepcionais e alcançar resultados duradouros. Nossos parceiros desempenham um papel fundamental na construção de uma rede de confiança e excelência.</p>
+              <p class="parceiros-description">
+                Na Systema F, acreditamos no poder das parcerias para
+                impulsionar o sucesso mútuo. Colaboramos com organizações
+                líderes e inovadoras para fornecer soluções excepcionais e
+                alcançar resultados duradouros. Nossos parceiros desempenham um
+                papel fundamental na construção de uma rede de confiança e
+                excelência.
+              </p>
             </article>
           </div>
+          <div class="col-md-6">
+            <div class="row row-cols-2 justify-content-center">
+              <img
+                src="../images/avante.png"
+                alt="logo da empresa avante"
+                class="img-fluid"
+              />
+              <img
+                src="../images/digisat.png"
+                alt="logo da empresa digisat"
+                class="img-fluid"
+              />
+              <img
+                src="../images/valid.png"
+                alt="logo da empresa valid"
+                class="img-fluid"
+              />
+              <img
+                src="../images/var.png"
+                alt="logo da empresa var"
+                class="img-fluid"
+              />
+            </div>
+          </div>
         </div>
+      </section>
+
+      <section id="ending" class="container-fluid p-5 text-center">
+        <div class="bg-img"></div>
+
+        <h1 class="mb-5">
+          Descubra como uma parceria conosco pode beneficiar sua organização.
+          Entre em contato para discutir oportunidades de colaboração e juntos
+          construirmos um futuro de sucesso.
+        </h1>
+        <button class="btn btn-lg btn-primary">
+          Fale conosco
+        </button>
       </section>
 
       <footer class="container-fluid p-5 g-5">
