clear code, format files and adjust contact information

--- a/public/pages/sobre.html
+++ b/public/pages/sobre.html
@@ -80,7 +80,7 @@
         id="hero"
         class="container-fluid p-5 d-flex align-items-center justify-content-center"
       >
-        <div class="bg-img-sobre"></div>
+        <div class="bg-img-sobre" aria-label="pessoas usando um computador"></div>
 
         <article class="text-center">
           <h1 class="hero-header-main">Bem vindo à Systema F!</h1>
@@ -109,7 +109,7 @@
               </p>
             </article>
 
-            <button class="btn btn-lg btn-primary">Saiba mais!</button>
+            <a href="/#contato" class="btn btn-lg btn-primary">Saiba mais!</a>
           </div>
           <div class="col-md-6"></div>
         </div>
@@ -261,16 +261,16 @@
       </section>
 
       <section id="ending" class="container-fluid p-5 text-center">
-        <div class="bg-img"></div>
+        <div class="bg-img" aria-label="homem segurando tablet"></div>
 
         <h1 class="mb-5">
           Descubra como uma parceria conosco pode beneficiar sua organização.
           Entre em contato para discutir oportunidades de colaboração e juntos
           construirmos um futuro de sucesso.
         </h1>
-        <button class="btn btn-lg btn-primary">
+        <a href="/#contato" class="btn btn-lg btn-primary">
           Fale conosco
-        </button>
+        </a>
       </section>
 
       <footer class="container-fluid p-5 g-5">
@@ -287,10 +287,11 @@
               <em class="d-block mb-2"> Email: email@example.com </em>
               <em class="d-block mb-2">
                 <i class="fa-solid fa-phone"></i>
-                <span>+55 (81) 1234-5678</span>
+                <span>+55 (81) 9 9551-1229</span>
               </em>
               <em class="d-block mb-2">
-                Endereço: Estrada do Encanamento, 12, Recife
+                Endereço: Av. Conselheiro Rosa e Silva, 1460 - Empresarial ETC,
+                1° Andar, Recife
               </em>
             </div>
           </div>
@@ -315,7 +316,7 @@
               </a>
 
               <a
-                href="https://api.whatsapp.com/send?phone=551234567890"
+                href="https://api.whatsapp.com/send?phone=5581995511229"
                 target="_blank"
               >
                 <i class="fa-brands fa-whatsapp fa-2x social-icon"></i>
@@ -331,10 +332,10 @@
           >
             <h5>Venha nos visitar!</h5>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.6244984603304!2d-34.917265726190266!3d-8.037593580257033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab194e22a895d9%3A0x23ca9ada8825d499!2sTrois%20Beaut%C3%A9%3A%20Sal%C3%A3o%20de%20Beleza%20Zona%20Norte%20Recife!5e0!3m2!1spt-BR!2sbr!4v1698944543034!5m2!1spt-BR!2sbr"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.611426927661!2d-34.902351725355395!3d-8.038935980275065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab18f8dfe28735%3A0x82a417ecf0cdb89!2sShopping%20ETC!5e0!3m2!1spt-BR!2sbr!4v1701810841588!5m2!1spt-BR!2sbr"
               width="250"
               height="250"
-              style="border: 0; border-radius: 1rem"
+              style="border: 0; border-radius: 1rem;"
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
