--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -145,7 +145,8 @@
             class="col-xl-6 col-lg-6 col-md-6 d-flex flex-column justify-content-center gap-3"
           >
             <h1 class="feature-header">
-              Com o Fystem@ você tem a flexibilidade e organização necessárias independente do seu tamanho
+              Com o Fystem@ você tem a flexibilidade e organização necessárias
+              independente do seu tamanho
             </h1>
             <p class="feature-paragraph">
               Com uma gama robusta de funcionalidades, nossa plataforma é
@@ -157,8 +158,8 @@
             <img
               id="fi1"
               class="img-fluid"
-              src="../images/browser-3614768_1280.png"
-              alt=""
+              src="../images/notebook-and-charts.png"
+              alt="ilustração de notebook e gráficos"
             />
           </div>
         </div>
@@ -172,19 +173,19 @@
               Liberdade de Acesso em Qualquer Lugar
             </h1>
             <p class="feature-paragraph">
-              Com o Fystem@ baseado na nuvem, você tem a liberdade de
-              gerenciar e monitorar as operações da sua empresa a partir de
-              qualquer dispositivo, em qualquer lugar. Seja no escritório, em
-              casa ou em trânsito, a nossa plataforma oferece acesso conveniente
-              e sem complicações, garantindo que você esteja sempre no controle.
+              Com o Fystem@ baseado na nuvem, você tem a liberdade de gerenciar
+              e monitorar as operações da sua empresa a partir de qualquer
+              dispositivo, em qualquer lugar. Seja no escritório, em casa ou em
+              trânsito, a nossa plataforma oferece acesso conveniente e sem
+              complicações, garantindo que você esteja sempre no controle.
             </p>
           </article>
           <div class="feature-img col-md-6 d-flex justify-content-center">
             <img
               id="fi2"
               class="img-fluid"
-              src="../images/cloud-3406627_1280-removebg-preview.png"
-              alt=""
+              src="../images/devices-connected-to-cloud.png"
+              alt="ilustração de dispositivos conectados à nuvem"
             />
           </div>
         </div>
@@ -210,8 +211,8 @@
               <img
                 id="fi3"
                 class="img-fluid feature-img"
-                src="../images/cloud-3865312_640.jpg"
-                alt="#"
+                src="../images/cadeado-e-cloud.jpg"
+                alt="ilustração de cadeado e uma nuvem"
               />
             </div>
           </div>
@@ -240,8 +241,8 @@
 
                 <img
                   class="testimonial-img rounded-circle"
-                  src="../images/profile-pic-3.jpg"
-                  alt="dog-profile"
+                  src="../images/profile-pic.jpg"
+                  alt="foto de perfil"
                 />
                 <em class="d-block testimonial-person">Pedro Oliveira</em>
                 <em class="d-block testimonial-person">Gerente de TI</em>
@@ -264,8 +265,8 @@
                 </p>
                 <img
                   class="testimonial-img rounded-circle"
-                  src="../images/profile-pic-3.jpg"
-                  alt="dog-profile"
+                  src="../images/profile-pic.jpg"
+                  alt="foto de perfil"
                 />
                 <em class="d-block testimonial-person">Joana Silva</em>
                 <em class="d-block testimonial-person"
@@ -312,10 +313,10 @@
               Se interessou? Agende uma demonstração!
             </h1>
             <img
-              src="../images/mail-1454731_1280.png"
+              src="../images/envelope.png"
               class="img-fluid"
               id="form-img"
-              alt=""
+              alt="ilustração de envelope"
             />
           </div>
           <div class="col-xl-4 col-lg-4">
@@ -386,8 +387,8 @@
           <div class="form-header d-flex gap-2 align-items-center">
             <h3>Se interessou? Agende uma demonstração!</h3>
             <img
-              src="../images/mail-1454731_1280.png"
-              alt=""
+              src="../images/envelope.png"
+              alt="ilustraçao de envelope"
               class="img-fluid"
             />
           </div>
@@ -461,11 +462,11 @@
               <em class="d-block mb-2"> Email: email@example.com </em>
               <em class="d-block mb-2">
                 <i class="fa-solid fa-phone"></i>
-                <span>+55 (81) 1234-5678</span>
+                <span>+55 (81) 9 9551-1229</span>
               </em>
               <em class="d-block mb-2">
-                Endereço: Av. Conselheiro Rosa e Silva, 1460 - 
-                Empresarial ETC, 1° Andar, Recife
+                Endereço: Av. Conselheiro Rosa e Silva, 1460 - Empresarial ETC,
+                1° Andar, Recife
               </em>
             </div>
           </div>
@@ -490,7 +491,7 @@
               </a>
 
               <a
-                href="https://api.whatsapp.com/send?phone=551234567890"
+                href="https://api.whatsapp.com/send?phone=5581995511229"
                 target="_blank"
               >
                 <i class="fa-brands fa-whatsapp fa-2x social-icon"></i>
@@ -506,10 +507,10 @@
           >
             <h5>Venha nos visitar!</h5>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.6244984603304!2d-34.917265726190266!3d-8.037593580257033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab194e22a895d9%3A0x23ca9ada8825d499!2sTrois%20Beaut%C3%A9%3A%20Sal%C3%A3o%20de%20Beleza%20Zona%20Norte%20Recife!5e0!3m2!1spt-BR!2sbr!4v1698944543034!5m2!1spt-BR!2sbr"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.611426927661!2d-34.902351725355395!3d-8.038935980275065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab18f8dfe28735%3A0x82a417ecf0cdb89!2sShopping%20ETC!5e0!3m2!1spt-BR!2sbr!4v1701810841588!5m2!1spt-BR!2sbr"
               width="250"
               height="250"
-              style="border: 0; border-radius: 1rem"
+              style="border: 0; border-radius: 1rem;"
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
