--- a/public/pages/solucoes.html
+++ b/public/pages/solucoes.html
@@ -305,9 +305,9 @@
                 Descubra como elevar a gestão fiscal e financeira da sua
                 empresa.
               </h1>
-              <button class="btn btn-lg btn-outline-primary align-self-center">
+              <a href="/#contato" class="btn btn-lg btn-outline-primary align-self-center">
                 Fale com a gente!
-              </button>
+              </a>
             </article>
           </div>
         </div>
@@ -405,13 +405,13 @@
               </p>
             </article>
             <div class="mt-3">
-              <button type="button" class="btn btn-primary">
+              <a href="/#contato" class="btn btn-primary">
                 Tenho interesse
-              </button>
+              </a>
             </div>
           </div>
           <div class="col-md-6">
-            <img src="../images/sales.jpg" alt="" class="img-fluid rounded-3" />
+            <img src="../images/crm.jpg" alt="" class="img-fluid rounded-3" />
           </div>
         </div>
 
@@ -459,18 +459,18 @@
           <p class="treinamento-description">Valorizamos seu sucesso desde o início. O treinamento especializado no Fystem@ ERP é uma cortesia, garantindo que você e sua equipe obtenham o máximo benefício sem custos adicionais.</p>
         </article>
         <div class="btn-container d-flex gap-3 justify-content-center">
-          <button class="btn btn-lg btn-primary">
+          <a href="/#contato" class="btn btn-lg btn-primary">
             Entre em contato
-          </button>
-          <button class="btn btn-lg btn-outline-primary">
+          </a>
+          <a href="/#contato" class="btn btn-lg btn-outline-primary">
             Saiba mais
-          </button>
+          </a>
         </div>
       </section>
 
       <footer class="container-fluid p-5 g-5">
-        <div class="row">
-          <div class="col d-flex flex-column gap-4 mt-3">
+        <div class="row gy-5 gy-md-0">
+          <div class="col-12 col-md-4 d-flex flex-column gap-4 mt-3">
             <a href="#" class="footer-link">
               <h5>Sobre nós</h5>
             </a>
@@ -482,15 +482,18 @@
               <em class="d-block mb-2"> Email: email@example.com </em>
               <em class="d-block mb-2">
                 <i class="fa-solid fa-phone"></i>
-                <span>+55 (81) 1234-5678</span>
+                <span>+55 (81) 9 9551-1229</span>
               </em>
               <em class="d-block mb-2">
-                Endereço: Estrada do Encanamento, 12, Recife
+                Endereço: Av. Conselheiro Rosa e Silva, 1460 - Empresarial ETC,
+                1° Andar, Recife
               </em>
             </div>
           </div>
 
-          <div class="col d-flex flex-column align-items-center gap-5">
+          <div
+            class="col-12 col-md-4 d-flex flex-column align-items-center gap-5"
+          >
             <div class="logo-footer">
               <div class="lines-footer">
                 <div></div>
@@ -508,7 +511,7 @@
               </a>
 
               <a
-                href="https://api.whatsapp.com/send?phone=551234567890"
+                href="https://api.whatsapp.com/send?phone=5581995511229"
                 target="_blank"
               >
                 <i class="fa-brands fa-whatsapp fa-2x social-icon"></i>
@@ -519,13 +522,15 @@
             </p>
           </div>
 
-          <div class="col d-flex flex-column align-items-center">
+          <div
+            class="col-md-4 d-flex flex-column align-items-center d-none d-md-block"
+          >
             <h5>Venha nos visitar!</h5>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.6244984603304!2d-34.917265726190266!3d-8.037593580257033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab194e22a895d9%3A0x23ca9ada8825d499!2sTrois%20Beaut%C3%A9%3A%20Sal%C3%A3o%20de%20Beleza%20Zona%20Norte%20Recife!5e0!3m2!1spt-BR!2sbr!4v1698944543034!5m2!1spt-BR!2sbr"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.611426927661!2d-34.902351725355395!3d-8.038935980275065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab18f8dfe28735%3A0x82a417ecf0cdb89!2sShopping%20ETC!5e0!3m2!1spt-BR!2sbr!4v1701810841588!5m2!1spt-BR!2sbr"
               width="250"
               height="250"
-              style="border: 0; border-radius: 1rem"
+              style="border: 0; border-radius: 1rem;"
               allowfullscreen=""
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
